# wispr-clone

./: .env  .env.example  .gitignore  WARP.md  package-lock.json  package.json  tsconfig.json
src/: App.css  App.tsx  vite.config.ts
src-tauri/src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src-tauri/src/: main.rs
src/services/: audio.ts  deepgram.ts  history.ts  injector.ts  settings.ts  sound.ts
src/src-tauri/src/: Cargo.toml  main.rs
wispr-clone/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
wispr-clone/src/: App.tsx  styles.css  vite-env.d.ts
wispr-clone/src-tauri/: Cargo.toml  tauri.conf.json
wispr-clone/src-tauri/src/: main.rs
wispr-clone/src/components/: AudioRecorder.tsx  Settings.tsx
