[package]
name = "app"
version = "0.1.0"
description = "wispr clone"
authors = ["You"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tauri backend with system tray support
tauri = { version = "1.5", features = [
  "system-tray",
  "shell-open",
  "window-all",
  "dialog-all",
  "http-all",
  "path-all",
  "fs-all",
  "clipboard-all",
  "notification-all"
] }

# Enigo for keyboard/mouse input (has `text` method in 0.1.x)
enigo = "0.1.3"

log = "0.4"
env_logger = "0.11"

[features]
# default features used by `cargo build` and `npm run tauri:dev`
default = ["custom-protocol"]

# required by Tauri + Vite setup
custom-protocol = ["tauri/custom-protocol"]
