[package]
name = "wispr-clone"
version = "0.1.0"
description = "Wispr-style voice dictation app"
authors = ["you"]
edition = "2021"
default-run = "wispr-clone"
build = "tauri-build.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enigo = "0.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
lto = true
opt-level = "z"
